--- a/jpashop_basic/pom.xml
+++ b/jpashop_basic/pom.xml
@@ -8,11 +8,13 @@
     <artifactId>jpashop_basic</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
+        <!-- JPA 하이버네이트 -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>2.1.214</version>
         </dependency>
+        <!-- H2 데이터베이스 -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
