엔티티를 조회해서 DTO 로 변환 페이징 고려

--- a/jpashop/src/main/resources/application.yml
+++ b/jpashop/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
+        default_batch_fetch_size: 1000
 #        show_sql: true #(system.out 으로 찍힘)
         format_sql: true
 logging.level:
