--- a/data-jpa/src/main/resources/application.yml
+++ b/data-jpa/src/main/resources/application.yml
@@ -9,8 +9,14 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-#        show_sql: true
-#        format_sql: true
+        #show_sql: true
+        #format_sql: true
+  data:
+    web:
+      pageable:
+        default-page-size: 20 # 기본 페이지 사이즈
+        max-page-size: 2000 # 최대 페이지 사이즈
+#        one-indexed-parameters: true
 #logging.level:
 #  org.hibernate.SQL: debug
 #  org.hibernate.type: trace
